Fixed spacing main

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ canvas {
 	width: 50%;
 	position: absolute;
 	bottom: 5%;
-	left: 20%;
+	left: 25%;
 }
 
 #zoneJoueur {
